tests/negative/typecheck/float.orng
fn main()->Int {0.4}